womtool/src/test/resources/validate/wdl_draft3/invalid/use_nones/use_nones.wdl
version 1.0

workflow use_nones {
  input {
    Int? int_in = None
  }

  output {
    Int? out = int_in
    Int? out2 = None
  }

}
